--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -22,29 +22,44 @@ body {
 
   --textLink: var(--black);
   --hr: var(--gray-medium);
-  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 50vw;
 }
 
 header {
   display: flex;
-  justify-content: space-between;
-}
-@media (max-width: 375px) {
-  header {
-    display: block;
-  }
+  align-items: center;
+  padding: 1rem 0;
 }
 
 .rainbow {
   background-image: -webkit-linear-gradient(92deg, var(--coral), var(--pink));
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: rainbow 2s infinite linear;
+  animation: rainbow 15s infinite linear;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo h2 {
+  margin: 0;
 }
 
 .logo > svg {
-  height: 3rem;
-  width: 3rem;
+  height: 2.25rem;
+  width: 2.25rem;
 }
 
 @media (max-width: 320px) {
@@ -61,7 +76,9 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 65vh;
+  max-width: 45vw;
+  min-height: 85vh;
+  margin: auto;
 }
 
 .main-bio {
@@ -85,18 +102,9 @@ header {
 }
 
 .title {
-  font-size: 6rem;
-  font-weight: 700;
-  margin-top: 2rem;
-  margin-bottom: 0;
-  margin-left: -0.45rem;
-}
-
-.subtitle {
-  font-size: 1.75rem;
+  font-size: 2rem;
   font-weight: 600;
   margin-bottom: 0.45rem;
-  margin-top: 0;
 }
 
 @media (max-width: 1024px) {
@@ -108,16 +116,10 @@ header {
     flex: 0 0 100%;
     margin-right: 0;
   }
-  .main-bio h1 {
-    margin-top: 2.5rem;
-    margin-bottom: 0;
-  }
 
   .title {
-    font-size: 4.55rem;
-  }
-  .subtitle {
-    font-size: 1.45rem;
+    padding-top: 1rem;
+    font-size: 1rem;
   }
   .avatar {
     margin-right: 0;
@@ -130,12 +132,10 @@ header {
 }
 .horizontal-links > li {
   display: inline-block;
-  margin-right: 1.5rem;
-  margin-bottom: 0;
+  margin-left: 1.5rem;
+  margin-bottom: 0.15rem;
 }
-.horizontal-links > li:last-child {
-  margin-right: 0;
-}
+
 @media only screen and (max-width: 480px) {
   .horizontal-links {
     margin-left: 0;
