--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700;900&display=swap');
 
 html {
   font-family: sans-serif;
@@ -15,15 +15,17 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: #2b2b2c;
+  color: #6C7A89;
   background-color: #f5f5f5;
   min-height: 100vh;
-  color: hsla(0, 0%, 0%, 0.8);
   font-family: 'Raleway', sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
-  font-feature-settings: "kern", "liga", "clig", "calt";
+  font-weight: 600;
+}
+h1, h2, h3, h4, h5, h6 {
+  color: #2A2F36;
 }
 article,
 aside,
@@ -60,12 +62,11 @@ a {
   background-color: transparent;
   text-decoration: none;
   color: #2b2b2c;
-  -webkit-text-decoration-skip: objects;
+  transition: all 0.15s ease-in-out;
 }
 a:active,
 a:hover {
-  outline-width: 0;
-  font-weight: bolder;
+  color: #ffb8d1;
 }
 abbr[title] {
   border-bottom: none;
@@ -250,7 +251,6 @@ h1 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
@@ -267,7 +267,6 @@ h2 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
@@ -284,7 +283,6 @@ h3 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
@@ -301,7 +299,6 @@ h4 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
@@ -318,7 +315,6 @@ h5 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
@@ -335,7 +331,6 @@ h6 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
@@ -700,10 +695,10 @@ nav ul li {
 
 .blog-post-preview,
 .blog-post {
-  padding: 2rem 1rem;
-  margin-bottom: 1rem;
-  background-color: #ffffff;
-  box-shadow: rgba(46, 41, 51, 0.08) 0px 1px 2px, rgba(71, 63, 79, 0.08) 0px 2px 4px;
+  /* padding: 2rem 1rem; */
+  /* margin-bottom: 1rem; */
+  /* background-color: #ffffff; */
+  /* box-shadow: rgba(46, 41, 51, 0.08) 0px 1px 2px, rgba(71, 63, 79, 0.08) 0px 2px 4px; */
   transform: translateZ(0px);
   text-align: left;
   border-width: 0px;
@@ -756,7 +751,8 @@ nav ul li {
   }
   .blog-post-preview,
   .blog-post {
-    padding: 2rem 4rem 4rem;
+    max-width: 45vw;
+    padding: 0 0 4rem;
   }
 }
 
@@ -786,8 +782,8 @@ nav ul li {
   color: #ffb8d1;
 }
 
-.blog-post h1,
-.blog-post-preview h2 {
+.blog-post h1:hover,
+.blog-post-preview h2:hover {
   background-image: -webkit-linear-gradient(92deg, #ff7a60, #ffb8d1);
   -webkit-background-clip: text;
   background-clip: text;
@@ -850,17 +846,17 @@ blockquote {
   opacity: 0.8;
 }
 
+.posts-list,
+.blog-post {
+  margin: 8rem 0 2rem;
+}
+
 .about-container {
   margin: 8rem 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.posts-list,
-.blog-post {
-  margin: 6rem 0;
+  /* align-items: center; */
+  /* justify-content: center; */
 }
 
 .about-gallery {
@@ -871,13 +867,13 @@ blockquote {
 }
 
 .image-about {
-  margin: 0.45rem;
+  /* margin: 0.45rem; */
   max-width: 300px;
 }
 
 @media only screen and (min-width: 992px) {
   .about-container {
-    max-width: 55vw;
+    max-width: 45vw;
   }
   .about-gallery {
     flex-direction: row;
@@ -885,4 +881,9 @@ blockquote {
   .image-about {
     max-width: 500px;
   }
+}
+
+::selection {
+  background: #ffb8d1;
+  color: #fff;
 }
