adding margin on about photos

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -679,7 +679,7 @@ nav ul {
 nav ul li {
   list-style: none;
   margin: 0;
-  padding: 0.65rem;
+  padding: 0.45rem;
 }
 
 .avatar {
@@ -720,7 +720,10 @@ nav ul li {
   nav .container {
     width: 100vw;
     justify-content: flex-start;
-    padding: 0 1.55rem;
+    padding: 0 0.55rem;
+  }
+  nav ul li {
+    padding: 0.65rem;
   }
   .container {
     max-width: 75vw;
@@ -877,8 +880,10 @@ blockquote {
   }
   .about-gallery {
     flex-direction: row;
+    margin-bottom: 1.25rem;
   }
   .image-about {
+    margin: 0.45rem;
     max-width: 500px;
   }
 }
