--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@500;600;700;900&display=swap');
 
 *, :after, :before {
   box-sizing: border-box;
@@ -13,7 +14,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: #6C7A89;
+  color: #222;
   background-color: #fff;
   min-height: 100vh;
   font-family: 'Raleway', sans-serif;
@@ -35,7 +36,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #2A2F36;
+  font-family: 'Source Serif Pro', serif;
 }
 
 h1 {
@@ -76,7 +77,7 @@ img {
 
 a {
   text-decoration: none;
-  color: #6C7A89;
+  color: #222;
 }
 
 ul {
@@ -89,3 +90,44 @@ ul {
   color: #fff;
 }
 
+blockquote {
+  max-width: 90%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+blockquote p {
+  font-family: 'Source Serif Pro', serif;
+  text-align: center;
+  font-size: 1.25rem;
+  line-height: 1.65rem;
+  display: inline-block;
+  margin: 0.8em auto;
+}
+
+blockquote::before {
+  content: "";
+  display: block;
+  width: 40%;
+  margin: 2rem auto 1rem;
+  border-top: 2px solid rgba(0, 0, 0, 0.1);
+}
+
+blockquote::after {
+  content: "";
+  display: block;
+  width: 40%;
+  margin: 1rem auto 2rem;
+  border-top: 2px solid rgba(0, 0, 0, 0.1);
+}
+
+@media (min-width: 992px) {
+  blockquote {
+    max-width: 70%;
+  }
+
+  blockquote p {
+    font-size: 1.75rem;
+    line-height: 2.25rem;
+  }
+}
